RAZ-241: implementa adapter DCASP
